CLOUD-1567 fixed the inability for auto authorization of agents to happen; teamcity didn't document a new requirement they added
java 11 support